Final fix