@@ -5,10 +5,10 @@ import static io.github.darealturtywurty.ancientology.core.util.Constants.RAND;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import io.github.darealturtywurty.ancientology.Ancientology;
 import io.github.darealturtywurty.ancientology.core.init.ItemInit;
+import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
@@ -29,6 +29,20 @@ import net.minecraftforge.registries.ForgeRegistries;
 public class ForbiddenFruitItem extends Item {
     public static final FoodProperties FOOD = new FoodProperties.Builder().alwaysEat().nutrition(10).saturationMod(0.1f)
             .build();
+
+    private static final Component BAD_EFFECT = new TranslatableComponent(
+            "msg." + Ancientology.MODID + ".fruit_give_bad_effect");
+    private static final Component GOOD_EFFECT = new TranslatableComponent(
+            "msg." + Ancientology.MODID + ".fruit_give_good_effect");
+    private static final Component GIVE_ITEM = new TranslatableComponent(
+            "msg." + Ancientology.MODID + ".fruit_give_item");
+    private static final Component LIGHTNING = new TranslatableComponent(
+            "msg." + Ancientology.MODID + ".fruit_lightning");
+    private static final Component ARROW_RAIN = new TranslatableComponent(
+            "msg." + Ancientology.MODID + ".fruit_arrow_rain");
+    private static final Component HUNGER = new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_hunger");
+    private static final Component CHANCE = new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_chance");
+    private static final Component NETHER = new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_nether");
     
     public ForbiddenFruitItem(Properties pProperties) {
         super(pProperties);
@@ -39,19 +53,19 @@ public class ForbiddenFruitItem extends Item {
         if (!pLevel.isClientSide) {
             useItem(pLevel, pLivingEntity);
         }
+        
         return super.finishUsingItem(pStack, pLevel, pLivingEntity);
     }
     
     public void giveRandomBadEffect(LivingEntity entity) {
         List<MobEffect> effects = new ArrayList<>(ForgeRegistries.MOB_EFFECTS.getValues());
-        effects = effects.stream().filter(mobEffect -> !mobEffect.isBeneficial()).collect(Collectors.toList());
+        effects = effects.stream().filter(mobEffect -> !mobEffect.isBeneficial()).toList();
         final MobEffect effect = effects.get(RAND.nextInt(effects.size()));
         final int duration = RAND.nextInt(1, 6) * 1200;
         final int amplifier = RAND.nextInt(5);
         final MobEffectInstance instance = new MobEffectInstance(effect, duration, amplifier);
         entity.addEffect(instance);
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_give_bad_effect"),
-                entity.getUUID());
+        entity.sendMessage(BAD_EFFECT, entity.getUUID());
     }
     
     public void giveRandomGoodEffect(LivingEntity entity) {
@@ -62,13 +76,12 @@ public class ForbiddenFruitItem extends Item {
         final int amplifier = RAND.nextInt(5);
         final MobEffectInstance instance = new MobEffectInstance(effect, duration, amplifier);
         entity.addEffect(instance);
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_give_good_effect"),
-                entity.getUUID());
+        entity.sendMessage(GOOD_EFFECT, entity.getUUID());
     }
     
     public void giveRandomItem(LivingEntity entity) {
         List<Item> items = new ArrayList<>(ForgeRegistries.ITEMS.getValues());
-        items = items.stream().filter(item -> item.getItemCategory() != null).collect(Collectors.toList());
+        items = items.stream().filter(item -> item.getItemCategory() != null).toList();
         final List<Enchantment> enchantments = new ArrayList<>(ForgeRegistries.ENCHANTMENTS.getValues());
         
         final ItemStack stack = new ItemStack(items.get(RAND.nextInt(items.size())));
@@ -81,14 +94,12 @@ public class ForbiddenFruitItem extends Item {
         
         if (entity instanceof final ServerPlayer player) {
             player.addItem(stack);
-            entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_give_item"),
-                    entity.getUUID());
+            entity.sendMessage(GIVE_ITEM, entity.getUUID());
         }
     }
     
     public void lightningStorm(LivingEntity entity, Level level) {
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_lightning"),
-                entity.getUUID());
+        entity.sendMessage(LIGHTNING, entity.getUUID());
         for (int j = 0; j < 10; j++) {
             final LightningBolt bolt = new LightningBolt(EntityType.LIGHTNING_BOLT, level);
             bolt.setPos(entity.getX(), entity.getY(), entity.getZ());
@@ -97,8 +108,7 @@ public class ForbiddenFruitItem extends Item {
     }
     
     public void rainOfArrows(LivingEntity entity, Level level) {
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_arrow_rain"),
-                entity.getUUID());
+        entity.sendMessage(ARROW_RAIN, entity.getUUID());
         for (int j = 0; j < 30; j++) {
             final Arrow bolt = new Arrow(EntityType.ARROW, level);
             bolt.setPos(entity.getX(), entity.getY() + 1, entity.getZ());
@@ -107,7 +117,7 @@ public class ForbiddenFruitItem extends Item {
     }
     
     public void removeHunger(LivingEntity entity) {
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_hunger"), entity.getUUID());
+        entity.sendMessage(HUNGER, entity.getUUID());
         if (entity instanceof final Player player) {
             player.getFoodData().setFoodLevel(0);
             player.getFoodData().setSaturation(0);
@@ -115,7 +125,7 @@ public class ForbiddenFruitItem extends Item {
     }
     
     public void secondChance(LivingEntity entity) {
-        entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_chance"), entity.getUUID());
+        entity.sendMessage(CHANCE, entity.getUUID());
         if (entity instanceof final Player player) {
             player.addItem(new ItemStack(ItemInit.FORBIDDEN_FRUIT.get()));
         }
@@ -126,8 +136,7 @@ public class ForbiddenFruitItem extends Item {
             final ServerLevel toLevel = Objects.requireNonNull(entity.level.getServer()).getLevel(Level.NETHER);
             player.teleportTo(toLevel, entity.blockPosition().getX(), Math.min(entity.blockPosition().getY(), 122),
                     entity.blockPosition().getZ(), 0, 0);
-            entity.sendMessage(new TranslatableComponent("msg." + Ancientology.MODID + ".fruit_nether"),
-                    entity.getUUID());
+            entity.sendMessage(NETHER, entity.getUUID());
         }
     }
     
@@ -148,7 +157,7 @@ public class ForbiddenFruitItem extends Item {
             } else if (f < 0.52) {
                 secondChance(entity);
             } else if (f < 0.6) {
-                // TODO
+                // TODO: Implement
             }
         } else if (f < 0.7) {
             giveRandomItem(entity);
